demo/hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sdemo
  namespace: default
  labels:
    app: k8sdemo
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30090 #service对外开放端口
  selector:
    app: k8sdemo
